[package]
name = "memorable"
version = "0.1.0"
authors = ["Rohan Jain <crodjer@gmail.com>"]

[[bin]]
name = "memorable"
doc = false

[dependencies]
clap = "2.27"
diesel = { version = "0.16.0", features = ["postgres"] }
diesel_codegen = { version = "0.16.0", features = ["postgres"] }
dotenv = "0.10"
iron = "0.5"
params = "0.7"
r2d2 = "0.7"
r2d2-diesel = "0.16"
rand = "0.3"
router = "0.5"
url = "1.6"
